wip:half baked film list

--- a/aula02/index.html
+++ b/aula02/index.html
@@ -8,6 +8,10 @@
     <title>Curso TypeScript - Aula 02</title>
   </head>
   <body>
-    <script src="./scripts/index.ts"></script>
+    <main id="container-grid-filmes"></main>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
+
+<!-- https://image.tmdb.org/t/p/w400/ugS5FVfCI3RV0ZwZtBV3HAV75OX.jpg -->
+<!-- Dragon Ball Z  -->
