--- a/aula03/index.html
+++ b/aula03/index.html
@@ -9,8 +9,25 @@
   </head>
   <body>
     <div>
+      <input placeholder="name" id="nameInput" />
+      <input placeholder="brand" id="brandInput" />
+      <input placeholder="price" id="priceInput" />
+      <input placeholder="category" id="categoryInput" />
+      <input placeholder="active" id="activeInput" />
+      <input placeholder="quantity" id="quantityInput" />
+      <button id="addButton">Add</button>
+
       <ul id="product-list"></ul>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
+
+<!-- (alias) type Product = {
+    id: number;
+    name: string;
+    brand: string;
+    price: number;
+    category: string;
+    active: boolean;
+    quantity: number; -->
