--- a/aula03/index.html
+++ b/aula03/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="filter-wrapper">
       <input placeholder="pesquisar" id="input-pesquisar" />
-      <select id="filter-type-select" value="marca">
-        <option value="marca">marca</option>
-        <option value="modelo">modelo</option>
+      <select id="filter-type-select" value="raca">
+        <option value="raca">raça</option>
+        <option value="Nome">Nome</option>
       </select>
       <button id="search-button">buscar</button>
     </div>
